--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "rewrites": [
-    {
-      "source": "/openapi/(.*)",
-      "destination": "/api/proxy"
-    },
-  ]
+    "github": {
+        "silent": true
+    }
 }
