--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "chatgpt-web",
+  "name": "ed-ai",
   "version": "2.11.1",
   "private": false,
-  "description": "ChatGPT Web",
+  "description": "Edward AI Chat",
   "author": "ChenZhaoYu <chenzhaoyu1994@gmail.com>",
   "keywords": [
     "chatgpt-web",
@@ -21,6 +21,7 @@
     "bootstrap": "pnpm install && pnpm run common:prepare",
     "common:cleanup": "rimraf node_modules && rimraf pnpm-lock.yaml",
     "common:prepare": "husky install"
+		"start": "node server.js" // 添加了名为 "start" 的启动命令
   },
   "dependencies": {
     "@vscode/markdown-it-katex": "^1.0.3",
@@ -35,6 +36,7 @@
     "vue": "^3.2.47",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
+		"express": "^4.17.1" // 添加了 Express 依赖项
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.3",
