--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-    "github": {
-        "silent": true
+  "rewrites": [
+    {
+      "source": "/openapi/(.*)",
+      "destination": "/api/proxy"
     }
+  ]
 }
