--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ed-ai",
+  "name": "edward-ai",
   "version": "2.11.1",
   "private": false,
   "description": "Edward AI Chat",
@@ -21,7 +21,6 @@
     "bootstrap": "pnpm install && pnpm run common:prepare",
     "common:cleanup": "rimraf node_modules && rimraf pnpm-lock.yaml",
     "common:prepare": "husky install"
-		"start": "node server.js" // 添加了名为 "start" 的启动命令
   },
   "dependencies": {
     "@vscode/markdown-it-katex": "^1.0.3",
@@ -36,7 +35,6 @@
     "vue": "^3.2.47",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
-		"express": "^4.17.1" // 添加了 Express 依赖项
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.3",
