--- a/service/package.json
+++ b/service/package.json
@@ -2,7 +2,7 @@
   "name": "chatgpt-web-service",
   "version": "1.0.0",
   "private": false,
-  "description": "ChatGPT Web Service",
+  "description": "Edward AI Chat",
   "author": "ChenZhaoYu <chenzhaoyu1994@gmail.com>",
   "keywords": [
     "chatgpt-web",
